2003-03-04  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (strace.exe): Include mingw_getopt.o in link line.
	* cygcheck.cc (print_version): Update copyright.
	* strace.cc (print_version): Ditto.
	(main): Allow cygwin paths for -o option.
	(create_child): Allow cygwin path as argv[0].
	* path.cc (path.cc): Allow UNC paths.

2003-03-01  Pierre Humblet  <pierre.humblet@ieee.org>

	* mkpasswd.cc (main): On Win95, output both a default line and a 
	line for the current user (if known) with a pseudorandom uid. If
	the -u switch is given, produce a line for the specified user.
	* mkgroup.cc (main): On Win95 change the group name from "unknown" to 
	"all". 

2003-02-28  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (cygcheck.o): Fix so that actual mingw include files are
	used.
	* cygcheck.cc (find_on_path): Translate from cygwin path when qualified
	path name found.
	(pretty_id): New function.  Dump output of id command.
	(dump_sysinfo): Call pretty_id for CYGWIN=ntsec and CYGWIN=nontsec cases.

2003-02-12  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc (doit): Allocate more space for non-path filename.

2003-02-07  Christopher Faylor  <cgf@redhat.com>

	* dump_setup.cc (compar): Use case insensitive comparisons.
	(dump_setup): Calculate package_len based on already used "len".  Don't
	bother with version_len.

2003-02-07  Igor Pechtchanski <pechtcha@cs.nyu.edu>

	* dump_setup.cc (dump_setup): Compute the longest package name
	and align columns properly.

2003-02-06  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (common_apps): Add some more apps.
	* path.cc (get_cygdrive): Correctly set system flag.

2003-01-22  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (ALL_LDFLAGS): Remove newlib/libm from tools paths.
	(MINGW_LDFLAGS): Remove in favor of definition from Makefile.common.

2003-01-15  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c: Fix copyright date.
	* mkpasswd.c: Ditto.
	* setfacl.c: Ditto.
