@@ -1,3 +1,9 @@
+2003-03-09  Corinna Vinschen  <corinna@vinschen.de>
+
+	* getfacl.c (username): Fix ambiguous printf calls.
+	(groupname): Ditto.
+	(main): Ditto.
+
 2003-03-04  Christopher Faylor  <cgf@redhat.com>
 
 	* Makefile.in (strace.exe): Include mingw_getopt.o in link line.
